# usdcleaner

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  run_single_test.ps1  run_tests.ps1  vcpkg-configuration.json  vcpkg.json
cmake/: CompilerWarnings.cmake  Dependencies.cmake  FindFBXSDK.cmake  FindUSD.cmake
cmake/stubs/Imath/: ImathConfig.cmake  ImathConfigVersion.cmake
cmake/stubs/OpenSubdiv/: OpenSubdivConfig.cmake  OpenSubdivConfigVersion.cmake
cmake/stubs/TBB/: TBBConfig.cmake  TBBConfigVersion.cmake
python/usdcleaner/: __init__.py  batch.py  cli.py  config.py  reporting.py
src/bindings/: CMakeLists.txt  MetricsBindings.cpp  Module.cpp  PassBindings.cpp  PipelineBindings.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/cache/: GpuCacheOptimizer.cpp  GpuCacheOptimizer.h
src/core/common/: HashUtils.cpp  HashUtils.h  Metrics.cpp  Metrics.h  SpatialHash.cpp  SpatialHash.h  Types.h  UsdUtils.cpp  UsdUtils.h
src/core/hierarchy/: HierarchyFlattener.cpp  HierarchyFlattener.h
src/core/import/: FbxImportFixup.cpp  FbxImportFixup.h
src/core/instancing/: GeometryHasher.cpp  GeometryHasher.h  PointInstancerAuthor.cpp  PointInstancerAuthor.h
src/core/lod/: LodGenerator.cpp  LodGenerator.h  VariantSetAuthor.cpp  VariantSetAuthor.h
src/core/materials/: MaterialDeduplicator.cpp  MaterialDeduplicator.h  MaterialHasher.cpp  MaterialHasher.h
src/core/metadata/: IdentityXformStripper.cpp  IdentityXformStripper.h  MetadataStripper.cpp  MetadataStripper.h
src/core/occlusion/: BvhBuilder.cpp  BvhBuilder.h  InteriorCuller.cpp  InteriorCuller.h
src/core/pipeline/: BatchProcessor.cpp  BatchProcessor.h  OptimizationPass.h  Pipeline.cpp  Pipeline.h  StageProcessor.cpp  StageProcessor.h
src/core/topology/: DegenerateFaceRemover.cpp  DegenerateFaceRemover.h  LaminaFaceRemover.cpp  LaminaFaceRemover.h
src/core/welding/: PrimvarRemapper.cpp  PrimvarRemapper.h  VertexWelder.cpp  VertexWelder.h
src/plugin/: CMakeLists.txt
src/plugin/patches/: Helpers.h  UsdFbxDataReaderPatch.h  UsdFbxFileformat.h
tests/: CMakeLists.txt
tests/cpp/: test_degenerate_removal.cpp  test_hierarchy.cpp  test_identity_xform.cpp  test_instancing.cpp  test_lamina_removal.cpp  test_material_hasher.cpp  test_metadata_stripper.cpp  test_pipeline_integration.cpp  test_regression_fixes.cpp  test_spatial_hash.cpp  test_vertex_welder.cpp
tests/data/: cube_welding.usda  customdata_mixed.usda  deep_hierarchy.usda  degenerate_faces.usda  duplicate_materials.usda  facevarying_primvars.usda  identity_xforms.usda  instancable_meshes.usda  instancing_normalized.usda  lamina_faces.usda  metadata_bloat.usda  time_sampled_xforms.usda
